added meta image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://greensock.com/uploads/monthly_2020_05/greensock-thumb.png.640b7d423125b0ad11e9f2af1cbf94c9.png">
-    <meta property="og:site_name" content="Checkout this awesome animation">
+    <meta property="og:image" content="https://rishi120.github.io/svg-animation/assets/images/abstract.jpg">
+    <meta property="og:site_name" content="Checkout this awesome animation with Glass Morphism Effect">
     <meta property="og:title" content="Check out this amazing website." />
     <meta property="og:description" content="SVG animation acheived through GSAP" />
     <meta property="og:image:width" content="" />
