--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!--- glass morphism ui starts -->
 
         <section class="mosphism-ui">
-            <img src="assets/images/abstract.jpg">
+            <img src="assets/images/abstract-min.jpg">
             <div class="glass" id="glass">
                 <h2 class="seq">Hello everyone</h2>
                 <p class="seq">Let's go ahead and get this show on the road.</p>
